--- a/hello_world.html
+++ b/hello_world.html
@@ -1,1 +1,16 @@
-<h1>Hello world</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Hello world</h1>
+    <p>
+        Welcome to my first webpage! I am about to embark on this exciting journey of learning how to code. Won't you join me?
+
+    </p>
+</body>
+</html>
